--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-/hakyll
-/hakyll.hi
-/hakyll.o
-/_cache
-/_site
-.public
+# Created by https://www.gitignore.io/api/haskell
+
+### Haskell ###
+dist
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+.stack-work/
+_cache/
+_site/
